<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar">Avatar</string>
    <string name="author">Netology. University of online-jobs</string>
    <string name="published">May 21st at 18:36</string>
    <string name="extend">extend</string>
    <string name="textOfThePost">Hello, this is the new Netology!  Once upon a time, Netology began with online marketing intensives.  Then there were courses in design, development, analytics and management.  We grow ourselves and help students grow: from beginners to confident professionals.  But the most important thing remains with us: we believe that everyone already has a force that makes you want more, aim higher, run faster.  Our mission is to help you get on the road to growth and start a chain of change -> <link>http://netolo.gy/fyb</link></string>
    <string name="likes">likes</string>
    <string name="NumberOfLikes">998</string>
    <string name="share">share</string>
    <string name="ShareNumber">998</string>
    <string name="NumberOfViews">50</string>
    <string name="amountOfViews">AmountOfViews</string>
    <string name="Remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="save">Save</string>
    <string name="error_empty_content">Error: Empty Content</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="editing_mode">Editing mode</string>
    <string name="chooser_share_post">Choose share post</string>
    <string name="blankPage">This is a blank page</string>
    <string name="createpost">createPost</string>
    <string name="image">image</string>
    <string name="link">https://www.google.com</string>
    <string name="addpost">addPost</string>
    <string name="playvideo">playVideo</string>
    <string name="video_link">Video Link</string>
    <string name="notification_user_liked">%1$s liked %2$s post</string>
    <string name="channel_remote_name">Channel remote name</string>
    <string name="channel_remote_description">Channel remote description</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>