<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintBottom_toTopOf="@+id/content"
                app:layout_constraintEnd_toStartOf="@+id/author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/netology" />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/author"
                app:layout_constraintBottom_toTopOf="@id/published"
                app:layout_constraintEnd_toStartOf="@id/imageButton"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="@id/imageView" />

            <TextView
                android:id="@+id/published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/published"
                app:layout_constraintBottom_toBottomOf="@id/imageView"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/author" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/imageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:button="@drawable/ic_baseline_more_vert_24"
                android:contentDescription="@string/extend"
                app:layout_constraintBottom_toTopOf="@id/published"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:autoLink="web"
                android:hint="@string/post_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lineHeight="30dp"
                android:padding="20dp"
                android:textColorLink="#5CCBCF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/video_link"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lineHeight="30dp"
                android:padding="20dp"
                android:textColorLink="#5CCBCF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content" />


            <ImageButton
                android:id="@+id/contentVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/background"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/playVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playvideo"
                android:src="@drawable/ic_baseline_play_arrow_24"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/contentLink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link" />

            <TextView
                android:id="@+id/contentLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="10dp"
                android:text="@string/link"
                android:textAlignment="center"
                android:textColorLink="#5CCBCF"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentVideo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/like"
                style="@style/Widget.AppTheme.LikeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checkable="false"
                android:clickable="false"
                android:contentDescription="@string/likes"
                app:icon="@drawable/ic_like_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentLink"
                tools:text="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                style="@style/Widget.AppTheme.ShareCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checkable="false"
                android:clickable="false"
                android:contentDescription="@string/share"
                app:icon="@drawable/ic_share_24"
                app:layout_constraintStart_toEndOf="@id/like"
                app:layout_constraintTop_toBottomOf="@id/contentLink"
                tools:text="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checkable="false"
                android:clickable="false"
                android:contentDescription="@string/view"
                app:icon="@drawable/ic_baseline_remove_red_eye_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentLink"
                tools:text="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/createpost"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>